--- a/assignment -2- Javascript/index.html
+++ b/assignment -2- Javascript/index.html
@@ -39,13 +39,10 @@
         </span>
         </select>
         <br /><br />
-        <input type="button" onclick="receiveNoteForm()" value="Submit">
+        <input type="button" onclick="getNoteForm()" value="Submit">
       </form>
       <p> Perfume recommendation: <strong id="perfumeRec"> </strong></p> 
     </div>
-
-   <p> Perfume recommendation: </p> 
-
 
     <footer>This project was coded by Sherin Adam</footer>
 
